updated ci cd 16

--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -17,11 +17,11 @@ jobs:
     steps:
       # Step 1: Checkout the code
       - name: Checkout Code
-        uses: actions/checkout@v3
+        uses: actions/checkout@v4
 
       # Step 2: Set up Node.js (match your version, e.g. 18)
       - name: Set up Node.js
-        uses: actions/setup-node@v3
+        uses: actions/setup-node@v4
         with:
           node-version: "18"
           cache: "npm"
@@ -31,28 +31,37 @@ jobs:
         run: |
           npm ci
           npm run build
+          echo "✅ Build completed successfully"
+          ls -la build/
 
-      # Step 4: Verify SSH connectivity
+      # Step 4: Verify SSH connectivity and test connection
       - name: Verify SSH connection to Lightsail
-        uses: appleboy/ssh-action@master
+        uses: appleboy/ssh-action@v1.0.3
         with:
           host: ${{ secrets.LIGHTSAIL_HOST }}
           username: ${{ secrets.LIGHTSAIL_USER }}
           key: ${{ secrets.LIGHTSAIL_KEY }}
           script: |
             echo "✅ SSH connection OK"
-            whoami && pwd
+            echo "Current user: $(whoami)"
+            echo "Current directory: $(pwd)"
+            echo "Available disk space:"
+            df -h
+            echo "Nginx status:"
+            sudo systemctl status nginx --no-pager || echo "Nginx not running"
 
       # Step 5: Clean temp deploy folder on Lightsail
       - name: Prepare remote temp dir
-        uses: appleboy/ssh-action@master
+        uses: appleboy/ssh-action@v1.0.3
         with:
           host: ${{ secrets.LIGHTSAIL_HOST }}
           username: ${{ secrets.LIGHTSAIL_USER }}
           key: ${{ secrets.LIGHTSAIL_KEY }}
           script: |
+            echo "🧹 Cleaning up previous deployment..."
             rm -rf ~/deploy-temp
             mkdir -p ~/deploy-temp
+            echo "✅ Temp directory prepared"
 
       # Step 6: Rsync build output to Lightsail
       - name: Upload build to Lightsail
@@ -67,18 +76,52 @@ jobs:
 
       # Step 7: Move build to web root, restart Nginx
       - name: Deploy & Restart Nginx
-        uses: appleboy/ssh-action@master
+        uses: appleboy/ssh-action@v1.0.3
         with:
           host: ${{ secrets.LIGHTSAIL_HOST }}
           username: ${{ secrets.LIGHTSAIL_USER }}
           key: ${{ secrets.LIGHTSAIL_KEY }}
           script: |
+            echo "🚀 Starting deployment..."
+
+            # Backup existing deployment
+            if [ -d "/var/www/html/goec-dashboard" ]; then
+              echo "📦 Backing up existing deployment..."
+              sudo cp -R /var/www/html/goec-dashboard /var/www/html/goec-dashboard.backup.$(date +%Y%m%d_%H%M%S)
+            fi
+
+            # Remove old deployment
+            echo "🗑️ Removing old deployment..."
             sudo rm -rf /var/www/html/goec-dashboard
+
+            # Create new directory
+            echo "📁 Creating deployment directory..."
             sudo mkdir -p /var/www/html/goec-dashboard
-            sudo cp -R ~/deploy-temp/* /var/www/html/goec-dashboard
+
+            # Copy new build
+            echo "📋 Copying new build..."
+            sudo cp -R ~/deploy-temp/* /var/www/html/goec-dashboard/
+
+            # Set permissions
+            echo "🔐 Setting permissions..."
             sudo chown -R www-data:www-data /var/www/html/goec-dashboard
             sudo chmod -R 755 /var/www/html/goec-dashboard
+
+            # Clean up temp files
+            echo "🧹 Cleaning up temp files..."
             rm -rf ~/deploy-temp
-            echo "✅ New build deployed"
-            echo "♻️ Restarting Nginx"
+
+            # Test nginx configuration
+            echo "🔍 Testing nginx configuration..."
+            sudo nginx -t
+
+            # Restart nginx
+            echo "♻️ Restarting Nginx..."
             sudo systemctl restart nginx
+
+            # Verify nginx is running
+            echo "✅ Checking nginx status..."
+            sudo systemctl status nginx --no-pager
+
+            echo "🎉 Deployment completed successfully!"
+            echo "🌐 Your app should be available at: http://${{ secrets.LIGHTSAIL_HOST }}"
