--- a/package.json
+++ b/package.json
@@ -37,7 +37,8 @@
     "sheetjs-style": "^0.15.8",
     "styled-components": "^6.1.2",
     "web-vitals": "^2.1.4",
-    "xlsx": "^0.18.5"
+    "xlsx": "^0.18.5",
+    "zustand": "^5.0.9"
   },
   "scripts": {
     "start": "react-scripts start",
